--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                     Market research, competitor analysis, and free social media strategy setup.</li></ul>
                    <ul><li>Content ideas, inspiration accounts, and a 1-year planning & posting calendar.</li> </ul>
                    <ul> <li>Quick social media education delivered in 8 hours.</li></ul></p>
+                   <br>
+                   <h3>Starting From $399</h3>
             </div>
 
             <div class=" box">
@@ -87,6 +89,8 @@
                     <li>One-time investment with free strategies and setup included.</li>
                 </ul>
                 </p>
+                <br>
+                <h3>Starting From $799</h3>
             </div>
 
             <div class="box">
@@ -106,6 +110,8 @@
                     </li>
                 </ul>
                 </p>
+                <br>
+                <h3>Starting From $399</h3>
             </div>
 
             <div class="box">
@@ -125,6 +131,8 @@
                     <li>Exclusive access to a private Facebook community for networking and support. </li>
                 </ul>
                 </p>
+                <br>
+                <h3>Starting From $149/ Month</h3>
             </div>
 
 
