--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <a href="#home" class="logo"><img src="images/logo.png" alt=""> <span>Social Media:</span> Elevated
+        <a href="index.html" class="logo"><img src="images/logo.png" alt=""> <span>Social Media:</span> Elevated
             </span></a>
         <a class="menu fas fa-bars"></a>
         <nav class="navbar">
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section class="home" id="home">
-        <h1> Solution To Your Social Media Needs</h1>
+        <h1 > # 1 Solution To Your Social Media Needs</h1>
         <p>Boosting Visibility, Engagement, And Growth!         </p>
        <!--- <a href="#contact" class="btn">Let's Connect</a> --->
     </section>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="box">
-                <h1 class="heading" style="text-align: left;">Our Story</h1>
+                <h1 class="heading" style="text-align: left; margin-top: 2rem;">Our Story</h1>
                 <p>It all started with a dream. Our founder, Jeevan Dhaker, began his journey as a content creator, managing every aspect of the process—from planning and recording to editing and posting—all on his own, with occasional support from friends and family.
                     As his brand grew, so did the responsibilities. Jeevan realized it was time to delegate, but finding the right help proved challenging. After researching countless companies, he was disappointed. Why? They were either overpriced or made lofty promises of engagement, growth, and exposure—yet their own social media presence was unimpressive.<Br><Br>
                     This sparked a realization: <i>How can they help me if they can’t even help themselves?</i> Jeevan’s results were far better than those of these so-called experts. That’s when the idea hit him:<i></i> What if I start a company that takes the burden of social media off business owners’ shoulders—while remaining affordable and genuinely focused on growth?</i>
@@ -67,7 +67,7 @@
                 <img src="images/icon-1.svg" alt="">
                 <h3>Strategies to Success                </h3>
                 <p><ul> <li>
-                    Market research, competitor analysis and social media strategy.</li></ul>
+                    Market research, competitors analysis and social media strategy.</li></ul>
                    <ul><li>Content ideas, inspiration accounts.</li> </ul>
                    <ul><li>1-year planning & posting calendar.</li> </ul>
 
@@ -119,17 +119,18 @@
                 <ul>
                     <li>FREE strategies & setup.</li>
                 </ul>
-                <ul>
-                    <li>30 days money-back guarantee.</li>
-                </ul>
+             
                 <ul>
                     <li>Services tailored to your plan: research, writing, recording, editing, and daily interactions.
                     </li>
                 </ul>
+                <ul>
+                    <li>30 days money-back guarantee.</li>
+                </ul>
                 </p>
                 <br>
                 <br>
-                <a href="#ManagementtoMiracle" class="btn1">Know More</a>
+                <a href="ManagementtoMiracle.html" class="btn1">Know More</a>
             </div>
 
             <div class="box">
@@ -147,6 +148,9 @@
                 </ul>
                 <ul>
                     <li>Exclusive access to a private Facebook community for networking and support. </li>
+                </ul>
+                <ul>
+                    <li>30 days money-back guarantee.</li>
                 </ul>
                 </p>
                 <br>
@@ -285,7 +289,7 @@
 
     <section class="footer">
         <a href="#home" class="logo"><span>Social Media:</span> Elevated</a>
-        <p> Let’s Take Your Social Media To The Next Level!<br>Owned & Operated by <a href="https://www.jeevanproductions.com/" target="_blank">Jeevan Productions LLC. Copyright 2024.</a></p>
+        <p> Let’s Take Your Social Media To The Next Level!<br>Owned & Operated by <a href="https://www.jeevanproductions.com/" target="_blank">Jeevan Productions LLC.</a> Copyright 2024.</p>
         <div class="socials">
             <a href="https://www.instagram.com/socialmedia_elevated/"> <ion-icon name="logo-instagram"></ion-icon> </a>
             <a href="https://www.youtube.com/@SocialMediaElevated"> <ion-icon
