--- a/ManagementtoMiracle.html
+++ b/ManagementtoMiracle.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <a href="#home" class="logo"><img src="images/logo.png" alt=""> <span>Social Media:</span> Elevated
+        <a href="index.html" class="logo"><img src="images/logo.png" alt=""> <span>Social Media:</span> Elevated
             </span></a>
         <a class="menu fas fa-bars"></a>
         <nav class="navbar">
